# ini-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/ini-cpp/: config.h  ini.hpp  ini_section.hpp  ini_value.hpp  parser_exception.hpp
include/ini-cpp/detail/: key_iterator.h  ordered_map.h  ordered_map_iterator.h  reverse_iterator.h  section_iterator.h
src/: ini.cpp  ini_section.cpp  ini_value.cpp  main.cpp  parser_exception.cpp
test/src/: main.cpp
